# sastastic

./: .env.example  .gitignore  MANIFEST.in  README.md  pyproject.toml
src/sastastic/: __main__.py  testic.py  utils.py
src/sastastic.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
